@@ -1,3 +1,8 @@
+2009-04-18  kitone  <kitone@gna.org>
+
+	* plugins/actions/textcorrection/Latn-fr.common-error.se-pattern.in:
+	Add "Spaces around square brackets" rule.
+
 2009-04-08  kitone  <kitone@gna.org>
 
 	* src/vp/videoplayer.cc:
